1.4/_sources/cpp2doc_generated/triqs/gfs/tail_impl.txt
..
   Generated automatically using the command:
   c++2doc.py -N triqs /var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/doc/reference/doc_root.hpp --output_directory=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/build/doc/cpp2doc_generated --includes=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/ --includes=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/build/Config --compiler_options=-DTRIQS_BUILDING_LIBRARY --mako_location=/var/lib/jenkins/jobs/triqs_clang3.8/workspace/triqs_src/tools/

.. highlight:: c


.. _tail_impl:

tail_impl
===========

**Synopsis**:

.. code-block:: c

     template<rvc_enum RVC> class tail_impl;

A common implementation class for tails.

 The high-frequency behavior (or **tail**) of a Green's function is of paramount importance in the context of Fourier transformations: since fermionic Green's functions are slowly decaying functions of frequency, special care has to be taken when Fourier-transforming them to time.

 The "tail" of a Green's function encodes the behavior of the Green's function :math:`G` at large Matsubara frequencies, namely



.. math::
		\mathbf{G}(i\omega_n) \stackrel {=}{\infty} \mathbf{a}_{-1}\cdot i\omega_n + \mathbf{a}_{0} +\mathbf{a}_{1}\cdot \frac{1}{ i\omega_n} +\mathbf{a}_{2}\cdot \frac{1}{ (i\omega_n)^2} +\dots

..



 Generically, the tail is parametrized by matrix-valued coefficients
 :math:`\mathbf{a}_{i}` (of size :math:`N_1 \times N_2`)

 :math:`t = \sum_{i=o_{min}}^{o_{max}} \mathbf{a}_i (i\omega_n)^{-i}`


.. note::
     three classes derive from this implementation class: :ref:`tail`, :ref:`tail_view` and :ref:`tail_const_view`




Template parameters
----------------------

   * **RVC**: regular/view/const_view


Member types
-----------------

+-----------------+---------+
| Member type     | Comment |
+=================+=========+
| view_type       |         |
+-----------------+---------+
| const_view_type |         |
+-----------------+---------+
| regular_type    |         |
+-----------------+---------+
| data_type       |         |
+-----------------+---------+
| mask_type       |         |
+-----------------+---------+
| mv_type         |         |
+-----------------+---------+
| const_mv_type   |         |
+-----------------+---------+
| shape_type      |         |
+-----------------+---------+

Member functions
-----------------

+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| Member function                                                        | Comment                                                                           |
+========================================================================+===================================================================================+
| :ref:`data <tail_impl_data>`                                           | data                                                                              |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`mask <tail_impl_mask>`                                           | array of the maximum zero indices                                                 |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`order_min <tail_impl_order_min>`                                 | minimum order                                                                     |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`order_max <tail_impl_order_max>`                                 | maximum order                                                                     |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`size <tail_impl_size>`                                           | number of coefficients (first dim of data)                                        |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`smallest_nonzero <tail_impl_smallest_nonzero>`                   | smallest nonzero term                                                             |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`shape <tail_impl_shape>`                                         | shape                                                                             |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`is_decreasing_at_infinity <tail_impl_is_decreasing_at_infinity>` | true if decreasing at infinity                                                    |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`operator() <tail_impl_operator()>`                               | call operator                                                                     |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`get_or_zero <tail_impl_get_or_zero>`                             | same as (), but if n is too large, then returns 0 instead of raising an exception |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+
| :ref:`serialize <tail_impl_serialize>`                                 |                                                                                   |
+------------------------------------------------------------------------+-----------------------------------------------------------------------------------+

.. toctree::
  :hidden:

   tail_impl/data
   tail_impl/mask
   tail_impl/order_min
   tail_impl/order_max
   tail_impl/size
   tail_impl/smallest_nonzero
   tail_impl/shape
   tail_impl/is_decreasing_at_infinity
   tail_impl/operator()
   tail_impl/get_or_zero
   tail_impl/serialize

Non Member functions
-----------------------

+--------------------------------------------------------------------------+---------------+
| Non member function                                                      | Comment       |
+==========================================================================+===============+
| :ref:`compose <tail_impl_compose>`                                       |               |
+--------------------------------------------------------------------------+---------------+
| :ref:`get_triqs_hdf5_data_scheme <tail_impl_get_triqs_hdf5_data_scheme>` |               |
+--------------------------------------------------------------------------+---------------+
| :ref:`h5_write <tail_impl_h5_write>`                                     | write to h5   |
+--------------------------------------------------------------------------+---------------+
| :ref:`h5_read <tail_impl_h5_read>`                                       | read from h5  |
+--------------------------------------------------------------------------+---------------+
| :ref:`mpi_broadcast <tail_impl_mpi_broadcast>`                           | mpi broadcast |
+--------------------------------------------------------------------------+---------------+

.. toctree::
  :hidden:

   tail_impl/compose
   tail_impl/get_triqs_hdf5_data_scheme
   tail_impl/h5_write
   tail_impl/h5_read
   tail_impl/mpi_broadcast